--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore --fix src",
-    "prettier": "prettier src --write"
+    "prettier": "prettier src --write",
+    "deploy": "npm run build && aws s3 sync dist/ s3://websitestack-reactshopbucket4b36a4a1-vn2nypejbfsi --delete && aws cloudfront create-invalidation --distribution-id ESDA1LRWFHJL1 --paths \"/*\""
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
