--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "deploy": "cd ../deploy-cdk && npm run build && cdk deploy BackendStack"
+    "deploy": "cd ../deploy-cdk && npm run build && cdk deploy BackendStack",
+    "seed": "node seed.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.751.0",
+    "uuid": "^11.1.0"
   }
 }
