--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.751.0",
-    "@aws-sdk/lib-dynamodb": "^3.751.0",
-    "uuid": "^11.1.0"
+    "@aws-sdk/lib-dynamodb": "^3.751.0"
   }
 }
