feat (lib): install logger

--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "@aws-lambda-powertools/logger": "^2.15.0",
     "@aws-sdk/client-dynamodb": "^3.751.0",
     "@aws-sdk/lib-dynamodb": "^3.751.0"
   }
