--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.751.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
-    "csv-parser": "^3.2.0"
+    "csv-parser": "^3.2.0",
+    "zod": "^3.24.2"
   }
 }
