--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "deploy": "cd ../deploy-cdk && npm run build && cdk deploy BackendStack",
     "seed": "node seed.js"
   },
   "keywords": [],
@@ -19,6 +18,7 @@
     "@aws-lambda-powertools/logger": "^2.15.0",
     "@aws-sdk/client-dynamodb": "^3.751.0",
     "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/client-sqs": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.751.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
     "csv-parser": "^3.2.0",
