--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@aws-lambda-powertools/logger": "^2.15.0",
     "@aws-sdk/client-dynamodb": "^3.751.0",
     "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/client-sns": "^3.758.0",
     "@aws-sdk/client-sqs": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.751.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
